<resources>
    <string name="app_name">Diary</string>
    <string name="finish_time">Finish time:</string>
    <string name="start_time">Start time:</string>
    <string name="add">Add</string>
    <string name="close">Close</string>
    <string name="add_event">Add event</string>
    <string name="description">Description</string>
    <string name="name">Name</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="invalid_input_error">Invalid time interval or event name.</string>
</resources>