<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout3"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".ui.add_event_screen.AddEventScreenFragment"
    android:padding="@dimen/add_event_screen_padding">

    <TextView
        android:id="@+id/screen_title"
        android:layout_width="0dp"
        style="@style/AddEventTitleTextStyle"
        android:layout_height="wrap_content"
        android:text="@string/add_event"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/event_name"
        android:textAlignment="center"/>

    <EditText
        android:id="@+id/event_name"
        style="@style/EventInfoTextStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/screen_title"
        app:layout_constraintBottom_toTopOf="@id/event_start_date"
        android:hint="@string/name"/>

    <TextView
        android:id="@+id/event_start_time_label"
        style="@style/EventInfoLabelTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start_time"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/event_name" />

    <EditText
        android:id="@+id/event_start_date"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/event_start_time"
        app:layout_constraintTop_toBottomOf="@id/event_start_time_label"
        app:layout_constraintHorizontal_chainStyle="spread_inside"/>

    <EditText
        android:id="@+id/event_start_time"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/event_start_date"
        app:layout_constraintTop_toTopOf="@id/event_start_date"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/event_finish_time_label"
        style="@style/EventInfoLabelTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/finish_time"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/event_start_time" />

    <EditText
        android:id="@+id/event_finish_date"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/event_finish_time"
        app:layout_constraintTop_toBottomOf="@id/event_finish_time_label"
        app:layout_constraintHorizontal_chainStyle="spread_inside"/>

    <EditText
        android:id="@+id/event_finish_time"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/event_finish_date"
        app:layout_constraintTop_toTopOf="@id/event_finish_date"
        app:layout_constraintEnd_toEndOf="parent"/>

    <EditText
        android:id="@+id/event_description"
        style="@style/EventInfoTextStyle"
        android:layout_width="0dp"
        android:layout_height="@dimen/event_description_height"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/event_finish_date"
        app:layout_constraintBottom_toTopOf="@id/add_btn"
        android:hint="@string/description"/>

    <Button
        android:id="@+id/add_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/event_description"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="@string/add"/>


</androidx.constraintlayout.widget.ConstraintLayout>